<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@null"
    tools:background="@color/msum_red">

    <LinearLayout
        android:id="@+id/container_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_home" />

        <TextView
            style="@style/AppTheme.TextAppearance.AppCompat.Body1.Secondary"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"/>
    </LinearLayout>

    <View
        android:background="@color/opaque_msum_white"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/container_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/container_embedded"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_circuit" />

        <TextView
            style="@style/AppTheme.TextAppearance.AppCompat.Body1.Secondary"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/embedded_station"/>
    </LinearLayout>

    <View
        android:background="@color/opaque_msum_white"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/container_embedded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/container_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:paddingStart="36dp"
        android:paddingEnd="36dp"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/container_embedded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_info" />

        <TextView
            style="@style/AppTheme.TextAppearance.AppCompat.Body1.Secondary"
            android:layout_marginStart="12dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"/>
    </LinearLayout>

    <View
        android:background="@color/opaque_msum_white"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/container_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>